--- a/compiler/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler/compiler.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="testparser.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="parser.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="parser.h">
