--- a/compiler/compiler/compiler.vcxproj.filters
+++ b/compiler/compiler/compiler.vcxproj.filters
@@ -39,4 +39,30 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\实验\parsertest\test.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="..\..\..\实验\parsertest\test0.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="..\..\..\实验\parsertest\test1.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="..\..\..\实验\parsertest\test2.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="..\..\..\实验\parsertest\test3.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="..\..\..\实验\parsertest\test4.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="..\..\..\实验\parsertest\test5.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="..\..\..\实验\parsertest\testerror.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
